# python-book-examples

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
clean-code-in-python/: README.md
clean-code-in-python/ch05/: README.md  decorator_class_01.py  decorator_class_02.py  decorator_funcion_01.py  decorator_parametrized_01.py  decorator_parametrized_02.py
clean-code-in-python/ch06/: README.md  descriptor_method_02.py  descriptor_method_03.py  descriptor_types_02.py  descriptors_01.py  descriptors_cpython_01.py  descriptors_implementation_01.py  descriptors_implementation_02.py  descriptors_methods_01.py  descriptors_pythonic_01.py  descriptors_pythonic_02.py  descriptors_types_01.py  descriptors_uses_01.py
clean-code-in-python/ch07/: README.md  generators_01.py  generators_coroutines_01.py  generators_coroutines_02.py  generators_iteration_01.py  generatorss_iteration_02.py
cosmic_python/: Makefile  README.md
cosmic_python/ch01/: model.py  test_batches.py
cosmic_python/ch02/: README.md  conftest.py  model.py  repository.py  test_orm.py  test_repository.py
cosmic_python/ch03/: README.md
cosmic_python/ch04/: flask_app.py  model.py  orm.py  repository.py  test_api.py
cython/: README.md
effective-python/better_way31/: step01.py  step02.py
fluent-python/: README.md
fluent-python/ch09/: vector2d_v0.py  vector2d_v1.py  vector2d_v2.py  vector2d_v3.py  vector2d_v3_slots.py
fluent-python/ch10/: vector_v1.py  vector_v2.py
fluent-python/ch19/: bulkfood_v2prop.py
fluent-python/ch20/: descriptorkinds.py  (+1 more)
utils/: logger.py
(+69 files in other folders)
